@@ -1,10 +1,15 @@
 package net.sf.memoranda.ui;
 
-import java.awt.BorderLayout;
-import java.awt.Color;
-import java.awt.Dimension;
-import java.awt.Point;
-import java.awt.event.ActionEvent;
+import net.sf.memoranda.*;
+import net.sf.memoranda.date.CalendarDate;
+import net.sf.memoranda.date.CurrentDate;
+import net.sf.memoranda.util.Context;
+import net.sf.memoranda.util.CurrentStorage;
+import net.sf.memoranda.util.Local;
+import net.sf.memoranda.util.Util;
+
+import javax.swing.*;
+import java.awt.*;
 import java.awt.event.KeyEvent;
 import java.awt.event.KeyListener;
 import java.awt.event.MouseAdapter;
@@ -12,306 +17,115 @@ import java.awt.event.MouseEvent;
 import java.util.Date;
 import java.util.Vector;
 
-import javax.swing.ImageIcon;
-import javax.swing.JButton;
-import javax.swing.JCheckBoxMenuItem;
-import javax.swing.JMenuItem;
-import javax.swing.JOptionPane;
-import javax.swing.JPanel;
-import javax.swing.JPopupMenu;
-import javax.swing.JScrollPane;
-import javax.swing.JToolBar;
-import javax.swing.event.ListSelectionEvent;
-import javax.swing.event.ListSelectionListener;
-
-import net.sf.memoranda.CurrentProject;
-import net.sf.memoranda.DefectList;
-import net.sf.memoranda.History;
-import net.sf.memoranda.NoteList;
-import net.sf.memoranda.Project;
-import net.sf.memoranda.ProjectListener;
-import net.sf.memoranda.ResourcesList;
-import net.sf.memoranda.Task;
-import net.sf.memoranda.TaskList;
-import net.sf.memoranda.date.CalendarDate;
-import net.sf.memoranda.date.CurrentDate;
-import net.sf.memoranda.date.DateListener;
-import net.sf.memoranda.util.Context;
-import net.sf.memoranda.util.CurrentStorage;
-import net.sf.memoranda.util.Local;
-import net.sf.memoranda.util.Util;
-
 /*$Id: TaskPanel.java,v 1.27 2007/01/17 20:49:12 killerjoe Exp $*/
-public class TaskPanel extends JPanel {
-    BorderLayout borderLayout1 = new BorderLayout();
-    JButton historyBackB = new JButton();
-    JToolBar tasksToolBar = new JToolBar();
-    JButton historyForwardB = new JButton();
-    JButton newTaskB = new JButton();
-    JButton subTaskB = new JButton();
-    JButton editTaskB = new JButton();
-    JButton removeTaskB = new JButton();
-    JButton completeTaskB = new JButton();
-    
-	JCheckBoxMenuItem ppShowActiveOnlyChB = new JCheckBoxMenuItem();
-		
-    JScrollPane scrollPane = new JScrollPane();
-    TaskTable taskTable = new TaskTable();
-	JMenuItem ppEditTask = new JMenuItem();
-	JPopupMenu taskPPMenu = new JPopupMenu();
-	JMenuItem ppRemoveTask = new JMenuItem();
-	JMenuItem ppNewTask = new JMenuItem();
-	JMenuItem ppCompleteTask = new JMenuItem();
-	//JMenuItem ppSubTasks = new JMenuItem();
-	//JMenuItem ppParentTask = new JMenuItem();
-	JMenuItem ppAddSubTask = new JMenuItem();
-	JMenuItem ppCalcTask = new JMenuItem();
-	DailyItemsPanel parentPanel = null;
+@SuppressWarnings("serial")
+class TaskPanel extends JPanel {
+    final TaskTable taskTable = new TaskTable();
+    private final Dimension buttonDimension = new Dimension(24, 24);
+    private final ImageIcon newTaskImage = new ImageIcon(AppFrame.class.getResource
+            ("resources/icons/todo_new.png"));
+    private final ImageIcon newSubTaskImage = new ImageIcon(AppFrame.class.getResource
+            ("resources/icons/todo_new_sub.png"));
+    private final ImageIcon editTaskImage = new ImageIcon(AppFrame.class.getResource
+            ("resources/icons/todo_edit.png"));
+    private final ImageIcon removeTaskImage = new ImageIcon(AppFrame.class.getResource
+            ("resources/icons/todo_remove.png"));
+    private final ImageIcon completeTaskImage = new ImageIcon(AppFrame.class.getResource
+            ("resources/icons/todo_complete.png"));
+    private final BorderLayout borderLayout1 = new BorderLayout();
+    private final JButton historyBackB = new JButton();
+    private final JToolBar tasksToolBar = new JToolBar();
+    private final JButton historyForwardB = new JButton();
+    private final JButton newTaskB = new JButton();
+    private final JButton subTaskB = new JButton();
+    private final JButton editTaskB = new JButton();
+    private final JButton removeTaskB = new JButton();
+    private final JButton completeTaskB = new JButton();
+    private final JCheckBoxMenuItem ppShowActiveOnlyChB = new JCheckBoxMenuItem();
+    private final JScrollPane scrollPane = new JScrollPane();
+    private final JMenuItem ppEditTask = new JMenuItem();
+    private final JPopupMenu taskPPMenu = new JPopupMenu();
+    private final JMenuItem ppRemoveTask = new JMenuItem();
+    private final JMenuItem ppNewTask = new JMenuItem();
+    private final JMenuItem ppCompleteTask = new JMenuItem();
+    private final JMenuItem ppAddSubTask = new JMenuItem();
+    private final JMenuItem ppCalcTask = new JMenuItem();
+    private DailyItemsPanel parentPanel = null;
 
     public TaskPanel(DailyItemsPanel _parentPanel) {
         try {
             parentPanel = _parentPanel;
             jbInit();
-        }
-        catch (Exception ex) {
+        } catch (Exception ex) {
             ex.printStackTrace();
         }
     }
-    void jbInit() throws Exception {
+
+    private void jbInit() {
         tasksToolBar.setFloatable(false);
 
+        buttonInitialization(historyBackB, Local.getString("History back"));
         historyBackB.setAction(History.historyBackAction);
-        historyBackB.setFocusable(false);
-        historyBackB.setBorderPainted(false);
-        historyBackB.setToolTipText(Local.getString("History back"));
-        historyBackB.setRequestFocusEnabled(false);
-        historyBackB.setPreferredSize(new Dimension(24, 24));
-        historyBackB.setMinimumSize(new Dimension(24, 24));
-        historyBackB.setMaximumSize(new Dimension(24, 24));
-        historyBackB.setText("");
 
+        buttonInitialization(historyForwardB, Local.getString("History forward"));
         historyForwardB.setAction(History.historyForwardAction);
-        historyForwardB.setBorderPainted(false);
-        historyForwardB.setFocusable(false);
-        historyForwardB.setPreferredSize(new Dimension(24, 24));
-        historyForwardB.setRequestFocusEnabled(false);
-        historyForwardB.setToolTipText(Local.getString("History forward"));
-        historyForwardB.setMinimumSize(new Dimension(24, 24));
-        historyForwardB.setMaximumSize(new Dimension(24, 24));
-        historyForwardB.setText("");
 
-        newTaskB.setIcon(
-            new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_new.png")));
-        newTaskB.setEnabled(true);
-        newTaskB.setMaximumSize(new Dimension(24, 24));
-        newTaskB.setMinimumSize(new Dimension(24, 24));
-        newTaskB.setToolTipText(Local.getString("Create new task"));
-        newTaskB.setRequestFocusEnabled(false);
-        newTaskB.setPreferredSize(new Dimension(24, 24));
-        newTaskB.setFocusable(false);
-        newTaskB.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                newTaskB_actionPerformed(e);
-            }
-        });
-        newTaskB.setBorderPainted(false);
-        
-        subTaskB.setIcon(
-            new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_new_sub.png")));
-        subTaskB.setEnabled(true);
-        subTaskB.setMaximumSize(new Dimension(24, 24));
-        subTaskB.setMinimumSize(new Dimension(24, 24));
-        subTaskB.setToolTipText(Local.getString("Add subtask"));
-        subTaskB.setRequestFocusEnabled(false);
-        subTaskB.setPreferredSize(new Dimension(24, 24));
-        subTaskB.setFocusable(false);
-        subTaskB.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                addSubTask_actionPerformed(e);
-            }
-        });
-        subTaskB.setBorderPainted(false);
+        buttonInitialization(newTaskB, Local.getString("Create new task"));
+        newTaskB.setIcon(newTaskImage);
+        newTaskB.addActionListener(e -> newTaskB_actionPerformed());
 
-        editTaskB.setBorderPainted(false);
-        editTaskB.setFocusable(false);
-        editTaskB.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                editTaskB_actionPerformed(e);
-            }
-        });
-        editTaskB.setPreferredSize(new Dimension(24, 24));
-        editTaskB.setRequestFocusEnabled(false);
-        editTaskB.setToolTipText(Local.getString("Edit task"));
-        editTaskB.setMinimumSize(new Dimension(24, 24));
-        editTaskB.setMaximumSize(new Dimension(24, 24));
-//        editTaskB.setEnabled(true);
-        editTaskB.setIcon(
-            new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_edit.png")));
+        buttonInitialization(subTaskB, Local.getString("Add subtask"));
+        subTaskB.setIcon(newSubTaskImage);
+        subTaskB.addActionListener(e -> addSubTask_actionPerformed());
 
-        removeTaskB.setBorderPainted(false);
-        removeTaskB.setFocusable(false);
-        removeTaskB.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                removeTaskB_actionPerformed(e);
-            }
-        });
-        removeTaskB.setPreferredSize(new Dimension(24, 24));
-        removeTaskB.setRequestFocusEnabled(false);
-        removeTaskB.setToolTipText(Local.getString("Remove task"));
-        removeTaskB.setMinimumSize(new Dimension(24, 24));
-        removeTaskB.setMaximumSize(new Dimension(24, 24));
-        removeTaskB.setIcon(
-            new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_remove.png")));
-        
-        completeTaskB.setBorderPainted(false);
-        completeTaskB.setFocusable(false);
-        completeTaskB.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppCompleteTask_actionPerformed(e);
-            }
-        });
-        completeTaskB.setPreferredSize(new Dimension(24, 24));
-        completeTaskB.setRequestFocusEnabled(false);
-        completeTaskB.setToolTipText(Local.getString("Complete task"));
-        completeTaskB.setMinimumSize(new Dimension(24, 24));
-        completeTaskB.setMaximumSize(new Dimension(24, 24));
-        completeTaskB.setIcon(
-            new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_complete.png")));
+        buttonInitialization(editTaskB, Local.getString("Edit task"));
+        editTaskB.setIcon(editTaskImage);
+        editTaskB.addActionListener(e -> editTaskB_actionPerformed());
 
-		// added by rawsushi
-//		showActiveOnly.setBorderPainted(false);
-//		showActiveOnly.setFocusable(false);
-//		showActiveOnly.addActionListener(new java.awt.event.ActionListener() {
-//			public void actionPerformed(ActionEvent e) {
-//				toggleShowActiveOnly_actionPerformed(e);
-//			}
-//		});
-//		showActiveOnly.setPreferredSize(new Dimension(24, 24));
-//		showActiveOnly.setRequestFocusEnabled(false);
-//		if (taskTable.isShowActiveOnly()) {
-//			showActiveOnly.setToolTipText(Local.getString("Show All"));			
-//		}
-//		else {
-//			showActiveOnly.setToolTipText(Local.getString("Show Active Only"));			
-//		}
-//		showActiveOnly.setMinimumSize(new Dimension(24, 24));
-//		showActiveOnly.setMaximumSize(new Dimension(24, 24));
-//		showActiveOnly.setIcon(
-//			new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_remove.png")));
-		// added by rawsushi
-		
-		ppShowActiveOnlyChB.setFont(new java.awt.Font("Dialog", 1, 11));
-		ppShowActiveOnlyChB.setText(
-			Local.getString("Show Active only"));
-		ppShowActiveOnlyChB
-			.addActionListener(new java.awt.event.ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				toggleShowActiveOnly_actionPerformed(e);
-			}
-		});		
-		boolean isShao =
-			(Context.get("SHOW_ACTIVE_TASKS_ONLY") != null)
-				&& (Context.get("SHOW_ACTIVE_TASKS_ONLY").equals("true"));
-		ppShowActiveOnlyChB.setSelected(isShao);
-		toggleShowActiveOnly_actionPerformed(null);
+        buttonInitialization(removeTaskB, Local.getString("Remove task"));
+        removeTaskB.setIcon(removeTaskImage);
+        removeTaskB.addActionListener(e -> removeTaskB_actionPerformed());
 
-		/*showActiveOnly.setPreferredSize(new Dimension(24, 24));
-		showActiveOnly.setRequestFocusEnabled(false);
-		if (taskTable.isShowActiveOnly()) {
-			showActiveOnly.setToolTipText(Local.getString("Show All"));			
-		}
-		else {
-			showActiveOnly.setToolTipText(Local.getString("Show Active Only"));			
-		}
-		showActiveOnly.setMinimumSize(new Dimension(24, 24));
-		showActiveOnly.setMaximumSize(new Dimension(24, 24));
-		showActiveOnly.setIcon(
-			new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_active.png")));*/
-		// added by rawsushi
-
+        buttonInitialization(completeTaskB, Local.getString("Complete task"));
+        completeTaskB.setIcon(completeTaskImage);
+        completeTaskB.addActionListener(e -> ppCompleteTask_actionPerformed());
 
         this.setLayout(borderLayout1);
         scrollPane.getViewport().setBackground(Color.white);
-        /*taskTable.setMaximumSize(new Dimension(32767, 32767));
-        taskTable.setRowHeight(24);*/
-        ppEditTask.setFont(new java.awt.Font("Dialog", 1, 11));
-    ppEditTask.setText(Local.getString("Edit task")+"...");
-    ppEditTask.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppEditTask_actionPerformed(e);
-            }
-        });
-    ppEditTask.setEnabled(false);
-    ppEditTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_edit.png")));
-    taskPPMenu.setFont(new java.awt.Font("Dialog", 1, 10));
-    ppRemoveTask.setFont(new java.awt.Font("Dialog", 1, 11));
-    ppRemoveTask.setText(Local.getString("Remove task"));
-    ppRemoveTask.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppRemoveTask_actionPerformed(e);
-            }
-        });
-    ppRemoveTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_remove.png")));
-    ppRemoveTask.setEnabled(false);
-    ppNewTask.setFont(new java.awt.Font("Dialog", 1, 11));
-    ppNewTask.setText(Local.getString("New task")+"...");
-    ppNewTask.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppNewTask_actionPerformed(e);
-            }
-        });
-    ppNewTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_new.png")));
+        taskPPMenu.setFont(new java.awt.Font("Dialog", 1, 10));
 
-    ppAddSubTask.setFont(new java.awt.Font("Dialog", 1, 11));
-    ppAddSubTask.setText(Local.getString("Add subtask"));
-    ppAddSubTask.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppAddSubTask_actionPerformed(e);
-            }
-        });
-    ppAddSubTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_new_sub.png")));
+        ppShowActiveOnlyChB.setFont(new java.awt.Font("Dialog", 1, 11));
+        ppShowActiveOnlyChB.setText(
+                Local.getString("Show Active only"));
+        ppShowActiveOnlyChB
+                .addActionListener(e -> toggleShowActiveOnly_actionPerformed());
+        boolean isShao =
+                (Context.get("SHOW_ACTIVE_TASKS_ONLY") != null)
+                        && (Context.get("SHOW_ACTIVE_TASKS_ONLY").equals("true"));
+        ppShowActiveOnlyChB.setSelected(isShao);
+        toggleShowActiveOnly_actionPerformed();
 
-    /*
-    ppSubTasks.setFont(new java.awt.Font("Dialog", 1, 11));
-    ppSubTasks.setText(Local.getString("List sub tasks"));
-    ppSubTasks.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppListSubTasks_actionPerformed(e);
-            }
-        });
-    ppSubTasks.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_new.png")));
 
-    ppParentTask.setFont(new java.awt.Font("Dialog", 1, 11));
-    ppParentTask.setText(Local.getString("Parent Task"));
-    ppParentTask.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                ppParentTask_actionPerformed(e);
-            }
-        });
-    ppParentTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_new.png")));
-    */
+        menuItemInitialization(ppEditTask, Local.getString("Edit task") + "...", editTaskImage);
+        ppEditTask.addActionListener(e -> editTaskB_actionPerformed());
 
-	ppCompleteTask.setFont(new java.awt.Font("Dialog", 1, 11));
-	ppCompleteTask.setText(Local.getString("Complete task"));
-	ppCompleteTask.addActionListener(new java.awt.event.ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				ppCompleteTask_actionPerformed(e);
-			}
-		});
-	ppCompleteTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_complete.png")));
-	ppCompleteTask.setEnabled(false);
+        menuItemInitialization(ppRemoveTask, Local.getString("Remove task"), removeTaskImage);
+        ppRemoveTask.addActionListener(e -> removeTaskB_actionPerformed());
 
-	ppCalcTask.setFont(new java.awt.Font("Dialog", 1, 11));
-	ppCalcTask.setText(Local.getString("Calculate task data"));
-	ppCalcTask.addActionListener(new java.awt.event.ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				ppCalcTask_actionPerformed(e);
-			}
-		});
-	ppCalcTask.setIcon(new ImageIcon(net.sf.memoranda.ui.AppFrame.class.getResource("resources/icons/todo_complete.png")));
-	ppCalcTask.setEnabled(false);
+        menuItemInitialization(ppNewTask, Local.getString("New task") + "...", newTaskImage);
+        ppNewTask.addActionListener(e -> newTaskB_actionPerformed());
 
-    scrollPane.getViewport().add(taskTable, null);
+        menuItemInitialization(ppAddSubTask, Local.getString("Add subtask"), newSubTaskImage);
+        ppAddSubTask.addActionListener(e -> addSubTask_actionPerformed());
+
+        menuItemInitialization(ppCompleteTask, Local.getString("Complete task"), completeTaskImage);
+        ppCompleteTask.addActionListener(e -> ppCompleteTask_actionPerformed());
+
+        menuItemInitialization(ppCalcTask, Local.getString("Calculate task data"), completeTaskImage);
+        ppCalcTask.addActionListener(e -> ppCalcTask_actionPerformed());
+
+
+        scrollPane.getViewport().add(taskTable, null);
         this.add(scrollPane, BorderLayout.CENTER);
         tasksToolBar.add(historyBackB, null);
         tasksToolBar.add(historyForwardB, null);
@@ -324,9 +138,6 @@ public class TaskPanel extends JPanel {
         tasksToolBar.add(editTaskB, null);
         tasksToolBar.add(completeTaskB, null);
 
-		//tasksToolBar.add(showActiveOnly, null);
-        
-
         this.add(tasksToolBar, BorderLayout.NORTH);
 
         PopupListener ppListener = new PopupListener();
@@ -334,123 +145,101 @@ public class TaskPanel extends JPanel {
         taskTable.addMouseListener(ppListener);
 
 
+        CurrentDate.addDateListener(d -> newTaskB.setEnabled(d.inPeriod(CurrentProject.get().getStartDate(),
+                CurrentProject.get().getEndDate())));
 
-        CurrentDate.addDateListener(new DateListener() {
-            public void dateChange(CalendarDate d) {
-                newTaskB.setEnabled(d.inPeriod(CurrentProject.get().getStartDate(), CurrentProject.get().getEndDate()));
-            }
-        });
         CurrentProject.addProjectListener(new ProjectListener() {
-            public void projectChange(Project p, NoteList nl, TaskList tl, DefectList d1, ResourcesList rl) {
+            public void projectChange() {
                 newTaskB.setEnabled(
-                    CurrentDate.get().inPeriod(p.getStartDate(), p.getEndDate()));
+                        CurrentDate.get().inPeriod(CurrentProject.get().getStartDate(), CurrentProject.get().getEndDate()));
             }
+
             public void projectWasChanged() {
-            	//taskTable.setCurrentRootTask(null); //XXX
             }
         });
-        taskTable.getSelectionModel().addListSelectionListener(new ListSelectionListener() {
-            public void valueChanged(ListSelectionEvent e) {
-                boolean enbl = (taskTable.getRowCount() > 0)&&(taskTable.getSelectedRow() > -1);
-                editTaskB.setEnabled(enbl);ppEditTask.setEnabled(enbl);
-                removeTaskB.setEnabled(enbl);ppRemoveTask.setEnabled(enbl);
-				
-				ppCompleteTask.setEnabled(enbl);
-				completeTaskB.setEnabled(enbl);
-				ppAddSubTask.setEnabled(enbl);
-				//ppSubTasks.setEnabled(enbl); // default value to be over-written later depending on whether it has sub tasks
-				ppCalcTask.setEnabled(enbl); // default value to be over-written later depending on whether it has sub tasks
-				
-				/*if (taskTable.getCurrentRootTask() == null) {
-					ppParentTask.setEnabled(false);
-				}
-				else {
-					ppParentTask.setEnabled(true);
-				}XXX*/
-				
-                if (enbl) {   
-    				String thisTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
-    				
-    				boolean hasSubTasks = CurrentProject.getTaskList().hasSubTasks(thisTaskId);
-    				//ppSubTasks.setEnabled(hasSubTasks);
-    				ppCalcTask.setEnabled(hasSubTasks);
-    				Task t = CurrentProject.getTaskList().getTask(thisTaskId);
-                    parentPanel.calendar.jnCalendar.renderer.setTask(t);
-                    parentPanel.calendar.jnCalendar.updateUI();
-                }    
-                else {
-                    parentPanel.calendar.jnCalendar.renderer.setTask(null);
-                    parentPanel.calendar.jnCalendar.updateUI();
-                }
+
+        taskTable.getSelectionModel().addListSelectionListener(e -> {
+            boolean enbl = (taskTable.getRowCount() > 0) && (taskTable.getSelectedRow() > -1);
+            editTaskB.setEnabled(enbl);
+            ppEditTask.setEnabled(enbl);
+            removeTaskB.setEnabled(enbl);
+            ppRemoveTask.setEnabled(enbl);
+
+            ppCompleteTask.setEnabled(enbl);
+            completeTaskB.setEnabled(enbl);
+            ppAddSubTask.setEnabled(enbl);
+            ppCalcTask.setEnabled(enbl);
+
+            if (enbl) {
+                String thisTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
+                boolean hasSubTasks = CurrentProject.getTaskList().hasSubTasks(thisTaskId);
+                ppCalcTask.setEnabled(hasSubTasks);
+                Task t = CurrentProject.getTaskList().getTask(thisTaskId);
+                parentPanel.calendar.jnCalendar.renderer.setTask(t);
+                parentPanel.calendar.jnCalendar.updateUI();
+            } else {
+                parentPanel.calendar.jnCalendar.renderer.setTask(null);
+                parentPanel.calendar.jnCalendar.updateUI();
             }
         });
+
         editTaskB.setEnabled(false);
         removeTaskB.setEnabled(false);
-		completeTaskB.setEnabled(false);
-		ppAddSubTask.setEnabled(false);
-		//ppSubTasks.setEnabled(false);
-		//ppParentTask.setEnabled(false);
-    taskPPMenu.add(ppEditTask);
-    
-    taskPPMenu.addSeparator();
-    taskPPMenu.add(ppNewTask);
-    taskPPMenu.add(ppAddSubTask);
-    taskPPMenu.add(ppRemoveTask);
-    
-    taskPPMenu.addSeparator();
-	taskPPMenu.add(ppCompleteTask);
-	taskPPMenu.add(ppCalcTask);
-	
-    //taskPPMenu.addSeparator();
-    
-    //taskPPMenu.add(ppSubTasks);
-    
-    //taskPPMenu.addSeparator();
-    //taskPPMenu.add(ppParentTask);
-    
-    taskPPMenu.addSeparator();
-	taskPPMenu.add(ppShowActiveOnlyChB);
+        completeTaskB.setEnabled(false);
+        ppAddSubTask.setEnabled(false);
 
-	
-		// define key actions in TaskPanel:
-		// - KEY:DELETE => delete tasks (recursivly).
-		// - KEY:INTERT => insert new Subtask if another is selected.
-		// - KEY:INSERT => insert new Task if nothing is selected.
-		// - KEY:SPACE => finish Task.
-		taskTable.addKeyListener(new KeyListener() {
-			public void keyPressed(KeyEvent e){
-				if(taskTable.getSelectedRows().length>0 
-					&& e.getKeyCode()==KeyEvent.VK_DELETE)
-					ppRemoveTask_actionPerformed(null);
-				
-				else if(e.getKeyCode()==KeyEvent.VK_INSERT) {
-					if(taskTable.getSelectedRows().length>0) {
-						ppAddSubTask_actionPerformed(null);
-					}
-					else {
-						ppNewTask_actionPerformed(null);						
-					}
-				}
-				
-				else if(e.getKeyCode()==KeyEvent.VK_SPACE
-						&& taskTable.getSelectedRows().length>0) {
-					ppCompleteTask_actionPerformed(null);
-				}
-			}
-			public void	keyReleased(KeyEvent e){}
-			public void keyTyped(KeyEvent e){} 
-		});	
+        taskPPMenu.add(ppEditTask);
+
+        taskPPMenu.addSeparator();
+        taskPPMenu.add(ppNewTask);
+        taskPPMenu.add(ppAddSubTask);
+        taskPPMenu.add(ppRemoveTask);
+
+        taskPPMenu.addSeparator();
+        taskPPMenu.add(ppCompleteTask);
+        taskPPMenu.add(ppCalcTask);
+
+        taskPPMenu.addSeparator();
+        taskPPMenu.add(ppShowActiveOnlyChB);
+
+
+        // define key actions in TaskPanel:
+        // - KEY:DELETE => delete tasks (recursivly).
+        // - KEY:INTERT => insert new Subtask if another is selected.
+        // - KEY:INSERT => insert new Task if nothing is selected.
+        // - KEY:SPACE => finish Task.
+        taskTable.addKeyListener(new KeyListener() {
+            public void keyPressed(KeyEvent e) {
+                if (taskTable.getSelectedRows().length > 0
+                        && e.getKeyCode() == KeyEvent.VK_DELETE)
+                    removeTaskB_actionPerformed();
+
+                else if (e.getKeyCode() == KeyEvent.VK_INSERT) {
+                    if (taskTable.getSelectedRows().length > 0) {
+                        addSubTask_actionPerformed();
+                    } else {
+                        newTaskB_actionPerformed();
+                    }
+                } else if (e.getKeyCode() == KeyEvent.VK_SPACE
+                        && taskTable.getSelectedRows().length > 0) {
+                    ppCompleteTask_actionPerformed();
+                }
+            }
+
+            public void keyReleased(KeyEvent e) {
+            }
+
+            public void keyTyped(KeyEvent e) {
+            }
+        });
 
     }
 
-    void editTaskB_actionPerformed(ActionEvent e) {
+    private void editTaskB_actionPerformed() {
         Task t =
-            CurrentProject.getTaskList().getTask(
-                taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString());
-        TaskDialog dlg = new TaskDialog(App.getFrame(), Local.getString("Edit task"));
-        Dimension frmSize = App.getFrame().getSize();
-        Point loc = App.getFrame().getLocation();
-        dlg.setLocation((frmSize.width - dlg.getSize().width) / 2 + loc.x, (frmSize.height - dlg.getSize().height) / 2 + loc.y);
+                CurrentProject.getTaskList().getTask(
+                        taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString());
+        TaskDialog dlg = createTaskDialog(Local.getString("Edit task"));
         dlg.tfTaskName.setText(t.getText());
         dlg.taDescription.setText(t.getDescription());
         dlg.spnStartDate.getModel().setValue(t.getStartDate().getDate());
@@ -458,23 +247,21 @@ public class TaskPanel extends JPanel {
         dlg.cmbPriority.setSelectedIndex(t.getPriority());
         dlg.cmbPhase.setSelectedIndex(t.getPhase());
         dlg.tfEffort.setText(Util.getHoursFromMillis(t.getEstEffort()));
-	//if((t.getStartDate().getDate()).after(t.getEndDate().getDate()))
-	if(t.getEndDate().getDate().equals(t.getStartDate().getDate()))
-		dlg.chkEndDate.setSelected(false);
-	else
-		dlg.chkEndDate.setSelected(true);
-	dlg.spnProgress.setValue(new Integer(t.getProgress()));
- 	dlg.chkEndDate_actionPerformed(null);	
+        if (t.getEndDate().getDate().equals(t.getStartDate().getDate()))
+            dlg.chkEndDate.setSelected(false);
+        else
+            dlg.chkEndDate.setSelected(true);
+        dlg.spnProgress.setValue(t.getProgress());
+        dlg.chkEndDate_actionPerformed(null);
         dlg.setVisible(true);
         if (dlg.CANCELLED)
             return;
         CalendarDate sd = new CalendarDate((Date) dlg.spnStartDate.getModel().getValue());
-//        CalendarDate ed = new CalendarDate((Date) dlg.endDate.getModel().getValue());
-         CalendarDate ed;
- 		if(dlg.chkEndDate.isSelected())
- 			ed = new CalendarDate((Date) dlg.spnEndDate.getModel().getValue());
- 		else
- 			ed = null;
+        CalendarDate ed;
+        if (dlg.chkEndDate.isSelected())
+            ed = new CalendarDate((Date) dlg.spnEndDate.getModel().getValue());
+        else
+            ed = null;
         t.setStartDate(sd);
         t.setEndDate(ed);
         t.setText(dlg.tfTaskName.getText());
@@ -482,285 +269,224 @@ public class TaskPanel extends JPanel {
         t.setPriority(dlg.cmbPriority.getSelectedIndex());
         t.setPhase(dlg.cmbPhase.getSelectedIndex());
         t.setEstEffort(Util.getMillisFromHours(dlg.tfEffort.getText()));
-        t.setProgress(((Integer)dlg.spnProgress.getValue()).intValue());
-        
-//		CurrentProject.getTaskList().adjustParentTasks(t);
+        t.setProgress((Integer) dlg.spnProgress.getValue());
 
         CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
         taskTable.tableChanged();
         parentPanel.updateIndicators();
-        //taskTable.updateUI();
     }
 
-    void newTaskB_actionPerformed(ActionEvent e) {
-        TaskDialog dlg = new TaskDialog(App.getFrame(), Local.getString("New task"));
-        
-        //XXX String parentTaskId = taskTable.getCurrentRootTask();
-        
-        Dimension frmSize = App.getFrame().getSize();
-        Point loc = App.getFrame().getLocation();
+    private void newTaskB_actionPerformed() {
+        TaskDialog dlg = createTaskDialog(Local.getString("New task"));
         dlg.spnStartDate.getModel().setValue(CurrentDate.get().getDate());
         dlg.spnEndDate.getModel().setValue(CurrentDate.get().getDate());
-        dlg.setLocation((frmSize.width - dlg.getSize().width) / 2 + loc.x, (frmSize.height - dlg.getSize().height) / 2 + loc.y);
         dlg.setVisible(true);
         if (dlg.CANCELLED)
             return;
         CalendarDate sd = new CalendarDate((Date) dlg.spnStartDate.getModel().getValue());
-//        CalendarDate ed = new CalendarDate((Date) dlg.endDate.getModel().getValue());
-          CalendarDate ed;
- 		if(dlg.chkEndDate.isSelected())
- 			ed = new CalendarDate((Date) dlg.spnEndDate.getModel().getValue());
- 		else
- 			ed = null;
+        CalendarDate ed;
+        if (dlg.chkEndDate.isSelected())
+            ed = new CalendarDate((Date) dlg.spnEndDate.getModel().getValue());
+        else
+            ed = null;
         long effort = Util.getMillisFromHours(dlg.tfEffort.getText());
-		//XXX Task newTask = CurrentProject.getTaskList().createTask(sd, ed, dlg.todoField.getText(), dlg.priorityCB.getSelectedIndex(), effort, dlg.descriptionField.getText(),parentTaskId);
-		Task newTask = CurrentProject.getTaskList().createTask(sd, ed, dlg.tfTaskName.getText(), dlg.cmbPriority.getSelectedIndex(), dlg.cmbPhase.getSelectedIndex(), effort, dlg.taDescription.getText(),null);
-//		CurrentProject.getTaskList().adjustParentTasks(newTask);
-		newTask.setProgress(((Integer)dlg.spnProgress.getValue()).intValue());
+        Task newTask = CurrentProject.getTaskList().createTask(sd, ed, dlg.tfTaskName.getText(), dlg.cmbPriority.getSelectedIndex(), dlg.cmbPhase.getSelectedIndex(), effort, dlg.taDescription.getText(), null);
+        newTask.setProgress((Integer) dlg.spnProgress.getValue());
         CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
         taskTable.tableChanged();
         parentPanel.updateIndicators();
-        //taskTable.updateUI();
     }
 
-    void addSubTask_actionPerformed(ActionEvent e) {
-        TaskDialog dlg = new TaskDialog(App.getFrame(), Local.getString("New Task"));
-        String parentTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
-        
-//        Util.debug("Adding sub task under " + parentTaskId);
-        
-        Dimension frmSize = App.getFrame().getSize();
-        Point loc = App.getFrame().getLocation();
-		Task parent = CurrentProject.getTaskList().getTask(parentTaskId);
-		CalendarDate todayD = CurrentDate.get();
-		if (todayD.after(parent.getStartDate()))
-			dlg.setStartDate(todayD);
-		else
-			dlg.setStartDate(parent.getStartDate());
-		if (parent.getEndDate() != null) 
-			dlg.setEndDate(parent.getEndDate());
-		else 
-			dlg.setEndDate(CurrentProject.get().getEndDate());
-		dlg.setStartDateLimit(parent.getStartDate(), parent.getEndDate());
-		dlg.setEndDateLimit(parent.getStartDate(), parent.getEndDate());
-        dlg.setLocation((frmSize.width - dlg.getSize().width) / 2 + loc.x, (frmSize.height - dlg.getSize().height) / 2 + loc.y);
-        dlg.setVisible(true);
-        if (dlg.CANCELLED)
+    private void addSubTask_actionPerformed() {
+        TaskDialog dlg = createTaskDialog(Local.getString("New Task"));
+        try {
+            String parentTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
+            Task parent = CurrentProject.getTaskList().getTask(parentTaskId);
+            CalendarDate todayD = CurrentDate.get();
+            if (todayD.after(parent.getStartDate()))
+                dlg.setStartDate(todayD);
+            else
+                dlg.setStartDate(parent.getStartDate());
+            if (parent.getEndDate() != null)
+                dlg.setEndDate(parent.getEndDate());
+            else
+                dlg.setEndDate(CurrentProject.get().getEndDate());
+            dlg.setStartDateLimit(parent.getStartDate(), parent.getEndDate());
+            dlg.setEndDateLimit(parent.getStartDate(), parent.getEndDate());
+            dlg.setVisible(true);
+            if (dlg.CANCELLED)
+                return;
+            CalendarDate sd = new CalendarDate((Date) dlg.spnStartDate.getModel().getValue());
+            CalendarDate ed;
+            if (dlg.chkEndDate.isSelected())
+                ed = new CalendarDate((Date) dlg.spnEndDate.getModel().getValue());
+            else
+                ed = null;
+            long effort = Util.getMillisFromHours(dlg.tfEffort.getText());
+            Task newTask = CurrentProject.getTaskList().createTask(sd, ed, dlg.tfTaskName.getText(), dlg.cmbPriority.getSelectedIndex(), dlg.cmbPhase.getSelectedIndex(), effort, dlg.taDescription.getText(), parentTaskId);
+            newTask.setProgress((Integer) dlg.spnProgress.getValue());
+
+            CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
+            taskTable.tableChanged();
+            parentPanel.updateIndicators();
+        } catch (NullPointerException exception) {
             return;
-        CalendarDate sd = new CalendarDate((Date) dlg.spnStartDate.getModel().getValue());
-//        CalendarDate ed = new CalendarDate((Date) dlg.endDate.getModel().getValue());
-          CalendarDate ed;
- 		if(dlg.chkEndDate.isSelected())
- 			ed = new CalendarDate((Date) dlg.spnEndDate.getModel().getValue());
- 		else
- 			ed = null;
-        long effort = Util.getMillisFromHours(dlg.tfEffort.getText());
-		Task newTask = CurrentProject.getTaskList().createTask(sd, ed, dlg.tfTaskName.getText(), dlg.cmbPriority.getSelectedIndex(), dlg.cmbPhase.getSelectedIndex(), effort, dlg.taDescription.getText(),parentTaskId);
-		newTask.setProgress(((Integer)dlg.spnProgress.getValue()).intValue());
-//		CurrentProject.getTaskList().adjustParentTasks(newTask);
-
-		CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
-        taskTable.tableChanged();
-        parentPanel.updateIndicators();
-        //taskTable.updateUI();
+        }
     }
 
-    void calcTask_actionPerformed(ActionEvent e) {
+    private void calcTask_actionPerformed() {
         TaskCalcDialog dlg = new TaskCalcDialog(App.getFrame());
         dlg.pack();
         Task t = CurrentProject.getTaskList().getTask(taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString());
-        
+
         Dimension frmSize = App.getFrame().getSize();
         Point loc = App.getFrame().getLocation();
-        
         dlg.setLocation((frmSize.width - dlg.getSize().width) / 2 + loc.x, (frmSize.height - dlg.getSize().height) / 2 + loc.y);
         dlg.setVisible(true);
         if (dlg.CANCELLED) {
-            return;            
+            return;
         }
-        
+
         TaskList tl = CurrentProject.getTaskList();
-        if(dlg.calcEffortChB.isSelected()) {
+        if (dlg.calcEffortChB.isSelected()) {
             t.setEstEffort(tl.calculateTotalEstimatedEffortFromSubTasks(t));
         }
-        
-        if(dlg.compactDatesChB.isSelected()) {
+
+        if (dlg.compactDatesChB.isSelected()) {
             t.setStartDate(tl.getEarliestStartDateFromSubTasks(t));
             t.setEndDate(tl.getLatestEndDateFromSubTasks(t));
         }
-        
-        if(dlg.calcCompletionChB.isSelected()) {
+
+        if (dlg.calcCompletionChB.isSelected()) {
             long[] res = tl.calculateCompletionFromSubTasks(t);
-            int thisProgress = (int) Math.round((((double)res[0] / (double)res[1]) * 100));
+            int thisProgress = (int) Math.round((((double) res[0] / (double) res[1]) * 100));
             t.setProgress(thisProgress);
         }
-        
-//        CalendarDate sd = new CalendarDate((Date) dlg.startDate.getModel().getValue());
-////        CalendarDate ed = new CalendarDate((Date) dlg.endDate.getModel().getValue());
-//          CalendarDate ed;
-// 		if(dlg.chkEndDate.isSelected())
-// 			ed = new CalendarDate((Date) dlg.endDate.getModel().getValue());
-// 		else
-// 			ed = new CalendarDate(0,0,0);
-//        long effort = Util.getMillisFromHours(dlg.effortField.getText());
-//		Task newTask = CurrentProject.getTaskList().createTask(sd, ed, dlg.todoField.getText(), dlg.priorityCB.getSelectedIndex(),effort, dlg.descriptionField.getText(),parentTaskId);
-//		
-		
+
         CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
         taskTable.tableChanged();
-//        parentPanel.updateIndicators();
-        //taskTable.updateUI();
     }
 
-    void listSubTasks_actionPerformed(ActionEvent e) {
-        String parentTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
-        
-        //XXX taskTable.setCurrentRootTask(parentTaskId); 
-		taskTable.tableChanged();
-
-//        parentPanel.updateIndicators();
-//        //taskTable.updateUI();
+    void listSubTasks_actionPerformed() {
+        taskTable.tableChanged();
     }
 
-    void parentTask_actionPerformed(ActionEvent e) {
-//    	String taskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
-//      
-//    	Task t = CurrentProject.getTaskList().getTask(taskId);
-    	/*XXX Task t2 = CurrentProject.getTaskList().getTask(taskTable.getCurrentRootTask());
-    	
-    	String parentTaskId = t2.getParent();
-    	if((parentTaskId == null) || (parentTaskId.equals(""))) {
-    		parentTaskId = null;
-    	}
-    	taskTable.setCurrentRootTask(parentTaskId); 
-    	taskTable.tableChanged();*/
-
-//      parentPanel.updateIndicators();
-//      //taskTable.updateUI();
-  }
-
-    void removeTaskB_actionPerformed(ActionEvent e) {
+    private void removeTaskB_actionPerformed() {
         String msg;
         String thisTaskId = taskTable.getModel().getValueAt(taskTable.getSelectedRow(), TaskTable.TASK_ID).toString();
-        
+
         if (taskTable.getSelectedRows().length > 1)
-            msg = Local.getString("Remove")+" "+taskTable.getSelectedRows().length +" "+Local.getString("tasks")+"?"
-             + "\n"+Local.getString("Are you sure?");
-        else {        	
-        	Task t = CurrentProject.getTaskList().getTask(thisTaskId);
-        	// check if there are subtasks
-			if(CurrentProject.getTaskList().hasSubTasks(thisTaskId)) {
-				msg = Local.getString("Remove task")+"\n'" + t.getText() + Local.getString("' and all subtasks") +"\n"+Local.getString("Are you sure?");
-			}
-			else {		            
-				msg = Local.getString("Remove task")+"\n'" + t.getText() + "'\n"+Local.getString("Are you sure?");
-			}
+            msg = Local.getString("Remove") + " " + taskTable.getSelectedRows().length + " " + Local.getString("tasks") + "?"
+                    + "\n" + Local.getString("Are you sure?");
+        else {
+            Task t = CurrentProject.getTaskList().getTask(thisTaskId);
+            // check if there are subtasks
+            if (CurrentProject.getTaskList().hasSubTasks(thisTaskId)) {
+                msg = Local.getString("Remove task") + "\n'" + t.getText() + Local.getString("' and all subtasks") + "\n" + Local.getString("Are you sure?");
+            } else {
+                msg = Local.getString("Remove task") + "\n'" + t.getText() + "'\n" + Local.getString("Are you sure?");
+            }
         }
         int n =
-            JOptionPane.showConfirmDialog(
-                App.getFrame(),
-                msg,
-                Local.getString("Remove task"),
-                JOptionPane.YES_NO_OPTION);
+                JOptionPane.showConfirmDialog(
+                        App.getFrame(),
+                        msg,
+                        Local.getString("Remove task"),
+                        JOptionPane.YES_NO_OPTION);
         if (n != JOptionPane.YES_OPTION)
             return;
-        Vector toremove = new Vector();
+        Vector<Task> toremove = new Vector<>();
         for (int i = 0; i < taskTable.getSelectedRows().length; i++) {
             Task t =
-            CurrentProject.getTaskList().getTask(
-                taskTable.getModel().getValueAt(taskTable.getSelectedRows()[i], TaskTable.TASK_ID).toString());
+                    CurrentProject.getTaskList().getTask(
+                            taskTable.getModel().getValueAt(taskTable.getSelectedRows()[i], TaskTable.TASK_ID).toString());
             if (t != null)
                 toremove.add(t);
         }
-        for (int i = 0; i < toremove.size(); i++) {
-            CurrentProject.getTaskList().removeTask((Task)toremove.get(i));
+        for (Task aToremove : toremove) {
+            CurrentProject.getTaskList().removeTask(aToremove);
         }
         taskTable.tableChanged();
         CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
         parentPanel.updateIndicators();
-        //taskTable.updateUI();
-
     }
 
-	void ppCompleteTask_actionPerformed(ActionEvent e) {
-		String msg;
-		Vector tocomplete = new Vector();
-		for (int i = 0; i < taskTable.getSelectedRows().length; i++) {
-			Task t =
-			CurrentProject.getTaskList().getTask(
-				taskTable.getModel().getValueAt(taskTable.getSelectedRows()[i], TaskTable.TASK_ID).toString());
-			if (t != null)
-				tocomplete.add(t);
-		}
-		for (int i = 0; i < tocomplete.size(); i++) {
-			Task t = (Task)tocomplete.get(i);
-			t.setProgress(100);
-		}
-		taskTable.tableChanged();
-		CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
-		parentPanel.updateIndicators();
-		//taskTable.updateUI();
-	}
+    private void ppCompleteTask_actionPerformed() {
+        Vector<Task> tocomplete = new Vector<>();
+        for (int i = 0; i < taskTable.getSelectedRows().length; i++) {
+            Task t =
+                    CurrentProject.getTaskList().getTask(
+                            taskTable.getModel().getValueAt(taskTable.getSelectedRows()[i], TaskTable.TASK_ID).toString());
+            if (t != null)
+                tocomplete.add(t);
+        }
+        for (Task t : tocomplete) {
+            t.setProgress(100);
+        }
+        taskTable.tableChanged();
+        CurrentStorage.get().storeTaskList(CurrentProject.getTaskList(), CurrentProject.get());
+        parentPanel.updateIndicators();
+    }
 
-	// toggle "show active only"
-	void toggleShowActiveOnly_actionPerformed(ActionEvent e) {
-		Context.put(
-			"SHOW_ACTIVE_TASKS_ONLY",
-			new Boolean(ppShowActiveOnlyChB.isSelected()));
-		taskTable.tableChanged();
-	}
+    // toggle "show active only"
+    private void toggleShowActiveOnly_actionPerformed() {
+        Context.put(
+                "SHOW_ACTIVE_TASKS_ONLY",
+                Boolean.valueOf(ppShowActiveOnlyChB.isSelected()));
+        taskTable.tableChanged();
+    }
+
+    private void ppCalcTask_actionPerformed() {
+        calcTask_actionPerformed();
+    }
+
+    private void buttonInitialization(JButton button, String toolTipText) {
+        button.setFocusable(false);
+        button.setBorderPainted(false);
+        button.setRequestFocusEnabled(false);
+        button.setBorderPainted(false);
+        button.setToolTipText(toolTipText);
+        button.setPreferredSize(buttonDimension);
+        button.setMinimumSize(buttonDimension);
+        button.setMaximumSize(buttonDimension);
+        button.setText("");
+    }
+
+    private void menuItemInitialization(JMenuItem menuItem, String text, ImageIcon imageIcon) {
+        menuItem.setFont(new java.awt.Font("Dialog", 1, 11));
+        menuItem.setText(text);
+        menuItem.setEnabled(false);
+        menuItem.setIcon(imageIcon);
+    }
+
+    private TaskDialog createTaskDialog(String windowHeader) {
+        TaskDialog taskDialog = new TaskDialog(App.getFrame(), windowHeader);
+        Dimension frmSize = App.getFrame().getSize();
+        Point loc = App.getFrame().getLocation();
+        taskDialog.setLocation((frmSize.width - taskDialog.getSize().width) / 2 + loc.x,
+                (frmSize.height - taskDialog.getSize().height) / 2 + loc.y);
+        return taskDialog;
+    }
 
     class PopupListener extends MouseAdapter {
-
         public void mouseClicked(MouseEvent e) {
-		if ((e.getClickCount() == 2) && (taskTable.getSelectedRow() > -1)){
-			// ignore "tree" column
-			//if(taskTable.getSelectedColumn() == 1) return;
-			
-			editTaskB_actionPerformed(null);
-		}
+            if ((e.getClickCount() == 2) && (taskTable.getSelectedRow() > -1)) {
+                editTaskB_actionPerformed();
+            }
         }
 
-                public void mousePressed(MouseEvent e) {
-                    maybeShowPopup(e);
-                }
+        public void mousePressed(MouseEvent e) {
+            maybeShowPopup(e);
+        }
 
-                public void mouseReleased(MouseEvent e) {
-                    maybeShowPopup(e);
-                }
+        public void mouseReleased(MouseEvent e) {
+            maybeShowPopup(e);
+        }
 
-                private void maybeShowPopup(MouseEvent e) {
-                    if (e.isPopupTrigger()) {
-                        taskPPMenu.show(e.getComponent(), e.getX(), e.getY());
-                    }
-                }
-
+        private void maybeShowPopup(MouseEvent e) {
+            if (e.isPopupTrigger()) {
+                taskPPMenu.show(e.getComponent(), e.getX(), e.getY());
+            }
+        }
     }
-
-  void ppEditTask_actionPerformed(ActionEvent e) {
-    editTaskB_actionPerformed(e);
-  }
-  void ppRemoveTask_actionPerformed(ActionEvent e) {
-    removeTaskB_actionPerformed(e);
-  }
-  void ppNewTask_actionPerformed(ActionEvent e) {
-    newTaskB_actionPerformed(e);
-  }
-
-  void ppAddSubTask_actionPerformed(ActionEvent e) {
-  	addSubTask_actionPerformed(e);
-  }
-
-  void ppListSubTasks_actionPerformed(ActionEvent e) {
-  	listSubTasks_actionPerformed(e);
-  }
-
-  void ppParentTask_actionPerformed(ActionEvent e) {
-  	parentTask_actionPerformed(e);
-  }
-
-  void ppCalcTask_actionPerformed(ActionEvent e) {
-      calcTask_actionPerformed(e);
-  }
-
 }
